# assay-aware-pan-cancer-genomics

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements-lock.txt  requirements.txt
R/: sessionInfo.txt
config/: data_manifest.json  pipeline.json  results_manifest.tsv
docs/: DATA_DICTIONARY.md  DATA_PROVENANCE.md  REPRODUCIBILITY.md
notebooks/: pancancer_mutational_landscape.ipynb
results/tables/: cohort_by_cancer.csv  (+41 more)
src/: 01_select_studies.py  01b_dedupe_samples.py  01c_sample_cancertype.py  01d_curate_cohort.py  02_build_gene_panel.py  03_fetch_alterations.py  04_define_assay_callability.py  05_fetch_copy_number.py  08_cosmic_cmc_annotate.py  16_curated_landscape.py  17_curated_interactions.py  18_depmap_lineage_adjusted.py  19_validate_cmh.py  20_complete_coverage.py  21_curated_pathways.py  22_curated_survival.py  23_figures1_to5.py  24_figures7_to8.py  25_hallmark_supplement.py  27_coverage_supplement.py  29_metadata_sensitivities.py  build_cbioportal_request_manifest.py  build_cross_layer_evidence.py  build_results_manifest.py  callability.py  cbioportal_client.py  check_portability.py  config.py  export_repository_results.py  nature_style.py  oncotree_taxonomy.py  plot_style.py  result_summary.py  run_all.py  run_pipeline.py  statistical_contracts.py  survival_cox_models.R  survival_extended_diagnostics.R  survival_unbiased_screen.R  verify_results_manifest.py
tests/: helpers.py  test_callability.py  test_frozen_outputs.py  test_specimen_and_patient.py  test_statistics.py  test_survival_contract.py
