[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "pancancer-mutational-landscape"
version = "1.0.0"
description = "Reproducibility code for an assay-aware pan-cancer mutational landscape"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = {file = "LICENSE"}
authors = [
  {name = "Musalula Sinkala"},
]
dependencies = [
  "numpy==2.4.6",
  "pandas==2.3.3",
  "scipy==1.17.1",
  "statsmodels==0.14.6",
  "matplotlib==3.10.9",
  "networkx==3.6",
  "requests==2.34.2",
  "tqdm==4.68.2",
  "lifelines==0.30.3",
  "pyarrow==24.0.0",
  "openpyxl==3.1.5",
  "Pillow==12.2.0",
]

[project.optional-dependencies]
notebook = [
  "IPython==9.14.1",
  "ipykernel==7.3.0",
  "jupyterlab==4.5.8",
  "nbformat==5.10.4",
  "nbconvert==7.17.1",
]

[tool.setuptools]
py-modules = []

[tool.coverage.run]
branch = true
source = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
